force-app/main/default/objects/cgcloud__Account_Product_Profile__c/cgcloud__Account_Product_Profile__c.object-meta.xml
<CustomObject>
    <description>Statistical profiles indicating how weekly data is distributed between a customer and category.</description>
    <label>Customer Category Profile</label>
    <nameField>
        <displayFormat>APS-{000000}</displayFormat>
        <label>Customer Product Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Category Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>