force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Reference to customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Category Week Day Distribution Profiles</relationshipLabel>
    <relationshipName>Customer_Product_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>