force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Check_is_Product_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_is_Product_Unique__c</fullName>
    <label>Check is Product Unique</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>