force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Monday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Monday__c</fullName>
    <description>Input value for the share valid for Mondays.</description>
    <label>Monday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>