force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Monday_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Monday_Percentage__c</fullName>
    <description>Utilized share value for Mondays. (Monday/Total).</description>
    <formula>cgcloud__Monday__c / cgcloud__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>