force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the product.</description>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Product_Level__c</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Category Week Day Distribution Profiles</relationshipLabel>
    <relationshipName>Customer_Product_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>