force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Describes the sales organization which the week day distribution profile belongs to.</description>
    <formula>cgcloud__Account__r.cgcloud__Sales_Org__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>