force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Saturday_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Saturday_Percentage__c</fullName>
    <description>Utilized share value for Saturdays. (Saturday/Total).</description>
    <formula>cgcloud__Saturday__c / cgcloud__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>