force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Sunday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sunday__c</fullName>
    <description>Utilized share value for Sundays. (Sunday/Total).</description>
    <label>Sunday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>