force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Wednesday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Wednesday__c</fullName>
    <description>Input value for the share valid for Wednesdays.</description>
    <label>Wednesday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>