force-app/main/default/objects/cgcloud__Account_Product_Profile__c/fields/cgcloud__Wednesday_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Wednesday_Percentage__c</fullName>
    <description>Utilized share value for Wednesdays. (Wednesday/Total).</description>
    <formula>cgcloud__Wednesday__c / cgcloud__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>