force-app/main/default/objects/cgcloud__Account_Product_Profile__c/validationRules/cgcloud__Account_Product_and_Profile_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Account_Product_and_Profile_Sales_Org</fullName>
    <active>true</active>
    <description>The Customer and the Category must have the same Sales Org (Acount.Sales_Org = Product.Sales_Org)</description>
    <errorConditionFormula>AND(NOT ISBLANK(cgcloud__Product__c), cgcloud__Sales_Org__c != cgcloud__Product__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Customer and the Category must have the same Sales Org.</errorMessage>
</ValidationRule>