force-app/main/default/objects/cgcloud__Account_Product_Profile__c/validationRules/cgcloud__Restrict_Negative_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Restrict_Negative_Values</fullName>
    <active>true</active>
    <description>Week Day values must be greater or equal than 0 (&gt;=0)</description>
    <errorConditionFormula>cgcloud__Monday__c &lt; 0 || cgcloud__Tuesday__c &lt; 0 || cgcloud__Wednesday__c &lt; 0 || cgcloud__Thursday__c &lt; 0 || cgcloud__Friday__c &lt; 0 || cgcloud__Saturday__c &lt; 0 || cgcloud__Sunday__c &lt; 0</errorConditionFormula>
    <errorMessage>Week Day values must be greater or equal than 0.</errorMessage>
</ValidationRule>